<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>


    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint">Symbol</string>
    <string name="input_prefill"></string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="five_days">5 d</string>
    <string name="one_month">1 m</string>
    <string name="three_months">3 m</string>
    <string name="one_year">1 y</string>
    <string name="three_years">3 y</string>
    <string name="last_update" translatable="false">lastUpdate</string>
    <string name="opening_label">Opening:</string>
    <string name="day_high_label">Daily high:</string>
    <string name="day_low_label">Daily low:</string>
    <string name="year_high_label">Year high:</string>
    <string name="year_low_label">Year low:</string>

    <string name="font_light" translatable="false">fonts/Roboto-Light.ttf</string>
    <string name="font_medium" translatable="false">fonts/Roboto-Medium.ttf</string>
    <string name="font_bold" translatable="false">fonts/Roboto-Bold.ttf</string>
    <string name="add_new_stock">Add new Stock</string>
    <string name="five_days_content_description">5 days</string>
    <string name="one_month_content_description">One month</string>
    <string name="three_months_content_description">Three months</string>
    <string name="one_year_content_description">One year</string>
    <string name="title_widget">Hello World</string>
    <string name="empty_string">No stock found</string>
    <string name="symbol_not_found">not found</string>

</resources>
